more simuni tasks

--- a/fp2017/exercises6.html
+++ b/fp2017/exercises6.html
@@ -374,6 +374,13 @@ label.margin-toggle:not(.sidenote-number) { display: none; }
 </div>
 </div>
 <div id="content">
+<div id="preamble">
+<div class="sectionbody">
+<div class="paragraph">
+<p>Среди задач есть от М.Симуни (<a href="mailto:simuni@mail.ru">simuni@mail.ru</a>). Можете свободно копировать и воспроизводить эти задачи, при условии сохранения ссылки на составителя.</p>
+</div>
+</div>
+</div>
 <div class="sect2">
 <h3 id="_Несколько_задач_про_списки">Несколько задач про списки</h3>
 <div class="olist arabic">
@@ -390,6 +397,19 @@ label.margin-toggle:not(.sidenote-number) { display: none; }
 <p>Используя бесконечные списки найдите простые числа с помощью решета Эратосфена.</p>
 <div class="paragraph">
 <p><strong>ВНИМАНИЕ, СПОЙЛЕР</strong>. Меня спрашивали в прошлый раз как это делать. О, это очень просто: нужная одна дополнительная функция, которая будет принимать список и фильтровать его хвост, проверяя делимость на голову.</p>
+</div>
+</li>
+<li>
+<p>Задача от М.Симуни. Опишите <code>fives</code>, как бесконечный список [5,55,555,5555,&#8230;&#8203;] – т.е. список из целых положительных чисел, у которых все цифры равны 5.</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Пример вызова: `take 7 fives `</p>
+</li>
+<li>
+<p>Ответ должен быть равен [5,55,555,5555,55555,555555,5555555]</p>
+</li>
+</ul>
 </div>
 </li>
 </ol>
@@ -462,7 +482,7 @@ label.margin-toggle:not(.sidenote-number) { display: none; }
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-09-29 20:04:48 MSK
+Last updated 2017-09-29 21:05:27 MSK
 </div>
 </div>
 </body>
