--- a/fp2017/exercises_all.html
+++ b/fp2017/exercises_all.html
@@ -538,13 +538,226 @@ k*x+l*y+m*z=n</p>
 </ul>
 </div>
 </li>
+<li>
+<p>Опишите <code>fives</code>, как бесконечный список [5,55,555,5555,&#8230;&#8203;] – т.е. список из целых положительных чисел, у которых все цифры равны 5.</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Пример вызова: `take 7 fives `</p>
+</li>
+<li>
+<p>Ответ должен быть равен [5,55,555,5555,55555,555555,5555555]</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p><strong>Задача про тридевятое царство</strong>
+В тридевятом царстве жизнь так устроена, что за все надо платить.. Поэтому, в частности, все функции имеют свою цену. И поэтому в тридевятом царстве не бывает, чтобы функция возвращала число, она всегда возвращает пару (ответ, цена). Вот примеры функций, которые там пишут:</p>
+<div class="ulist">
+<ul>
+<li>
+<p>sin39 x = (sin x, 2)</p>
+</li>
+<li>
+<p>exp39 x = (exp x, 5)</p>
+</li>
+<li>
+<p>f x = (x*x+5, 10)</p>
+<div class="paragraph">
+<p>Напишите функцию calculate, которая берет на вход список таких функций и число, вызывает все эти функции справа налево и возвращает пару (итоговое значение, итоговая цена).</p>
+</div>
+</li>
+<li>
+<p>Пример вызова: <code>calculate [sin39,exp39,f] 1</code></p>
+</li>
+<li>
+<p>Результат должен быть равен (sin(exp(1*1+5)), 17)</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>В задаче надо написать две функции.</p>
+<div class="paragraph">
+<p><code>sumDiv n</code> должна вернуть сумму всех делителей числа n, считая 1, но не считая самого n.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Пример вызова: sumDiv 12</p>
+</li>
+<li>
+<p>Ответ должен быть равен 1+2+3+4+6=16</p>
+<div class="paragraph">
+<p><code>amicables n</code>, которая возвращает список всех пар дружественных чисел, каждое из которых меньше или равно n.</p>
+</div>
+</li>
+<li>
+<p>Пример вызова: amicables 1000</p>
+</li>
+<li>
+<p>Ответ должен быть равен [(220,284)]</p>
+<div class="paragraph">
+<p>Справка: Числа a и b называется дружественными, если a равно сумме делителей b, а b равно сумме делителей a.</p>
+</div>
+<div class="paragraph">
+<p>Замечания:</p>
+</div>
+</li>
+<li>
+<p>Для единообразия давайте включать в список только те пары, в которых первое число меньше второго, и пары должны идти в порядке возрастания первых чисел пары.</p>
+</li>
+<li>
+<p>Дружественных чисел довольно мало, и, возможно, самым оптимальным было бы просто выписать все известные пары, скажем, до 1000000. Но, пожалуйста, давайте в это задаче этого не делать. Т.е. дополнительное условие - не использовать заранее подготовленные данные о дружественных числах.</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>Описать бесконечный список cantor , содержащий все пары целых положительных чисел (каждую по одному разу).
+Пример вызова: take 100 cantor
+Что получится, не могу сказать, потому что вы можете выбирать разные порядки обхода, но, например, что-то вроде [(1,1), (1,2), (2,2), (2,1), (1,3) и т.д.</p>
+</li>
+<li>
+<p>Описать функцию generalizedCantor с одним параметром n, которая возвращает бесконечный список, содержащий все возможные списки из n целых положительных чисел (каждый список по одному разу).</p>
+<div class="paragraph">
+<p>Пример вызова: take 100 (generalizedCantor 3)</p>
+</div>
+<div class="paragraph">
+<p>Что при этом получится, не могу сказать, потому что вы можете выбирать разные порядки обхода, но начало, видимо, будет [[1,1,1], [1,1,2], и т.д.</p>
+</div>
+</li>
+<li>
+<p>Описать функцию bigCos c параметром x, которая возвращает первый элемент в последовательности cos 1, cos 2, cos 3, cos 4, &#8230;&#8203; , который больше или равен x.</p>
+<div class="paragraph">
+<p>Дополнительное условие: нельзя определять свои функции (кроме bigCos, конечно). Можно использовать любые стандартные функции и лямбда выражения.</p>
+</div>
+<div class="paragraph">
+<p>Пример вызова: bigCos 0.99 результат должен быть равен примерно 0.9912028</p>
+</div>
+<div class="paragraph">
+<p>Замечания:
+  - очевидная подсказка: тут, конечно, удобно использовать бесконечные списки. Но можно и без них, наверное.</p>
+</div>
+</li>
+<li>
+<p>Пусть в списке я записал последовательность чисел - сколько денег я тратил каждый день в этом году. Запись я начал, конечно же, с понедельника.</p>
+<div class="paragraph">
+<p>Кроме этого я дал себе слово - по будним дням тратить не больше 300 р в день, а по выходным - не больше 1000 р. в день.
+Опишите функцию checkMyRules у которой параметр - такой список расходов, и которая проверяет, выполнил ли я свои собственные правила.</p>
+</div>
+<div class="paragraph">
+<p>Примеры вызова:
+  - `checkMyRules [100,200,150,250,100,200,800,100,300,200] `
+  - Ответ должен быть равен True.
+  - checkMyRules [100,200,150,250,100,200,800,100,600,200]
+  - Ответ должен быть равен False, потому что во второй вторник я потратил больше 200 р.</p>
+</div>
+<div class="paragraph">
+<p>+
+Замечание:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>В этой задаче можно (но не обязательно) использовать зацикленный список</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>Опишите brackets, как бесконечный список из строк, вот такой: ["[]","[[]]","[[[]]]","[[[[]]]]"&#8230;&#8203;]</p>
+<div class="paragraph">
+<p>Дополнительное условие: В этой задаче обязательно надо использовать прием "завязывание в узел"</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Пример вызова: <code>take 4 brackets</code></p>
+</li>
+<li>
+<p>Результат должен быть равен <code>["[]","[[]]","[[[]]]","[[[[]]]]"]</code></p>
+<div class="paragraph">
+<p>Напоминание: строки в Haskell - это списки символов. То есть, к ним можно применять операции :, ++ и другие функции для списков.</p>
+</div>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p><strong>Еще одна задача про тридевятое царство</strong> Из двух частей</p>
+<div class="paragraph">
+<p>Описать оператор &#8656;&lt; который работает так же, как оператор . (композиция функций), но только для функций, которые возвращают пару (результат, цена).</p>
+</div>
+<div class="paragraph">
+<p>Например, если у нас есть функции <code>sin39 x = (sin x, 2)</code>, <code>cos39 x = (cos x, 3)</code> и потом мы напишем <code>f = cos39 &lt;=&lt; sin39</code>
+то f должна для x возвращать пару <code>(cos(sin x),5)</code></p>
+</div>
+<div class="paragraph">
+<p>Описать функцию calculate из задачи 15-4 с помощью <code>foldr</code> и оператора &#8656;&lt;</p>
+</div>
+<div class="paragraph">
+<p>Подсказка: определение calculate, скорее всего, будет выглядеть как-то так:
+<code>calculate fs = foldr (&lt;=&lt;) ...какая то функция.. fs</code></p>
+</div>
+<div class="paragraph">
+<p>Примеры вызова:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>let { f x = (2*x, 1); g = f &lt;=&lt; а } in g 10</code></p>
+</li>
+<li>
+<p>Результат должен быть равен <code>(40,2)</code></p>
+</li>
+<li>
+<p><code>let f x = (2*x,1) in calculate [f,f,f] 1</code></p>
+</li>
+<li>
+<p>Результат должен быть равен <code>(8,3)</code></p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>Описать функцию superMap, которая похожа на map, но только позволяет заменять элемент в списке не на один, а на несколько.</p>
+<div class="paragraph">
+<p>Пример вызова: <code>superMap (\x -&gt; [sin x, cos x]) [1,2,3]</code>
+Должен получиться список <code>[sin 1, cos 1, sin 2, cos 2, sin 3, cos 3].</code></p>
+</div>
+<div class="paragraph">
+<p>Замечание: На самом деле, в Haskell есть сразу две стандартные функции, которые делают точно то же, что superMap. Но даже если вы знаете, как они называются, в этом задании вы, пожалуйста, их не используйте. Все остальные стандартные функции использовать можно.</p>
+</div>
+</li>
+<li>
+<p>Описать функцию allLists с двумя параметрами n и k, которая возвращает список из всех списков длины k, которые можно составить из чисел 1..n.</p>
+<div class="paragraph">
+<p>Пример вызова: <code>allLists 3 2 `
+Должно получиться: `[[1,1],[1,2],[1,3],[2,1],[2,2],[2,3],[3,1],[3,2],[3,3]]</code> (не обязательно именно в таком порядке).</p>
+</div>
+<div class="paragraph">
+<p>Замечания:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>В общем случае в списке должно быть, понятно, n^k элементов.</p>
+<div class="paragraph">
+<p>Подсказка: Я бы советовал использовать list comprehension, получится очень просто.</p>
+</div>
+</li>
+</ul>
+</div>
+</li>
 </ol>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-09-14 21:08:22 MSK
+Last updated 2017-09-29 21:24:38 MSK
 </div>
 </div>
 </body>
