--- a/fp2017/index.html
+++ b/fp2017/index.html
@@ -46,6 +46,10 @@
 <p><a href="http://learnyouahaskell.com/">Learn You a Haskell for Great Good</a></p>
 </div>
 <div class="paragraph">
+<p><a href="https://vk.com/wall-54530371_9051">Денис Шевченко "О Haskell по-человечески" 2014</a> Мало страниц, большой шрифт, хорошо рассказанные азы
+на простых примерах</p>
+</div>
+<div class="paragraph">
 <p>Можно также найти Р.Душкина "ФП на языке Haskell". <a href="https://wiki.haskell.org/Books">Ещё список на Haskell Wiki</a> (в том числе и на русском).</p>
 </div>
 <div class="paragraph">
@@ -152,7 +156,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-09-29 20:54:42 MSK
+Last updated 2018-04-03 20:10:27 MSK
 </div>
 </div>
 </body>
