More books for the course

--- a/fp2017/index.html
+++ b/fp2017/index.html
@@ -50,6 +50,10 @@
 на простых примерах</p>
 </div>
 <div class="paragraph">
+<p><a href="https://anton-k.github.io/ru-haskell-book/files/ru-haskell-book.pdf">По-русски</a>, свиду нормально написано, но проект книги заброшен и
+код местами устарел и не компилится.</p>
+</div>
+<div class="paragraph">
 <p>Можно также найти Р.Душкина "ФП на языке Haskell". <a href="https://wiki.haskell.org/Books">Ещё список на Haskell Wiki</a> (в том числе и на русском).</p>
 </div>
 <div class="paragraph">
@@ -156,7 +160,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-04-03 20:10:27 MSK
+Last updated 2018-04-18 17:26:36 MSK
 </div>
 </div>
 </body>
