--- a/fp2017/index.html
+++ b/fp2017/index.html
@@ -68,6 +68,9 @@
 <div class="paragraph">
 <p><a href="http://queue.acm.org/detail.cfm?id=2038036">OCaml for the Masses</a> Большинстов аргументов переносимо и на Haskell.</p>
 </div>
+<div class="paragraph">
+<p><a href="https://two-wrongs.com/a-gentle-introduction-to-monad-transformers">Адекватный туториал</a> про трансформеры</p>
+</div>
 </div>
 </div>
 </div>
@@ -160,7 +163,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-04-18 17:26:36 MSK
+Last updated 2018-04-18 17:45:49 MSK
 </div>
 </div>
 </body>
