--- a/blogarion/unsorted-papers.html
+++ b/blogarion/unsorted-papers.html
@@ -7,7 +7,21 @@ lead to wrong answers. Folks invent a way to preprocess Prolog programs to detec
 which terms can be recursive and use occurs-check unification only for this terms.</p>
 <p><hr/>Some prolog <a href='https://sicstus.sics.se/sicstus/docs/3.12.8/html/sicstus/Occur.html'>implementations</a> seems be able to deal with terms with cycles without cyclicing the programm. Some dirty hack probably....</p>
 <p><hr/></p>
-<h3 id="Verification">Verification</h3>
+<h2 id="Verification">Verification</h2>
 
-<p>aaaa</p>
+<h3 id="Inventing-a-new-language">Inventing a new language</h3>
+
+<p>OCaml with some annotations and Why3 solver under the hood (J.-C. Filliatre et all): <a href='https://hal.inria.fr/hal-01783851/file/main.pdf'>A Toolchain to Produce Correct-by-Construction OCaml Programs</a></p>
+<h2 id="Really-unsorted">Really unsorted</h2>
+
+<p><a href='https://github.com/dboulytchev/coq-supplementary'>Code</a> for Coq course from SPbAU.</p>
+<p>Why Elm is <a href='http://reasonablypolymorphic.com/blog/elm-is-wrong/'>wrong</a>.</p>
+<p>Oleg&#39;s <a href='http://okmij.org/ftp/ML/#resumable-exn'>resumable exceptions</a>.
+Oleg is doing <a href='http://okmij.org/ftp/ML/first-class-modules/generics.ml'>RTTI using first-class modules</a>.</p>
+<p>Octachron is doing peano arithmetic using types and polymorphic variants in OCaml https://github.com/Octachron/rational_in_types .</p>
+<p><a href='http://www.math.mcgill.ca/triples/Barr-Wells-ctcs.pdf'>Category Theory for Computing Science</a> by Michael Barr &amp; Charles Wells</p>
+<p><a href='https://www.youtube.com/watch?v=I8LbkfSSR58&amp;list=PLbgaMIhjbmEnaH_LTkxLI7FMa2HsnawM_'>Martosz Milewski lectures</a> on Category Theory</p>
+<p><a href='https://www.cs.cmu.edu/~comar/omar-thesis.pdf'>Reasonably Programmable Syntax</a> ph.D. thesis from Cyrus Omar</p>
+<p><a href='https://arxiv.org/pdf/1606.01106v1.pdf'>Set-Theoretic Types for Polymorphic Variants</a></p>
+<p><a href='https://www.cs.ox.ac.uk/ralf.hinze/Kan.pdf'>Kan Extensions for Program Optimisation Or: Art and Dan Explain an Old Trick</a></p>
 </article></body></html>
