--- a/blogarion/unsorted-papers.html
+++ b/blogarion/unsorted-papers.html
@@ -24,4 +24,8 @@ Oleg is doing <a href='http://okmij.org/ftp/ML/first-class-modules/generics.ml'>
 <p><a href='https://www.cs.cmu.edu/~comar/omar-thesis.pdf'>Reasonably Programmable Syntax</a> ph.D. thesis from Cyrus Omar</p>
 <p><a href='https://arxiv.org/pdf/1606.01106v1.pdf'>Set-Theoretic Types for Polymorphic Variants</a></p>
 <p><a href='https://www.cs.ox.ac.uk/ralf.hinze/Kan.pdf'>Kan Extensions for Program Optimisation Or: Art and Dan Explain an Old Trick</a></p>
+<p><a href='https://williamjbowman.com/resources/cps-sigma.pdf'>Type-Preserving CPS Translation of Σ and Π Types is Not Not Possible</a> from POPL 2018</p>
+<p><a href='http://pauillac.inria.fr/~remy/ornaments/mlorn-2017-09.pdf'>A Principled approach to Ornamentation in ML</a></p>
+<p><a href='https://www.youtube.com/watch?v=6t6bsWVOIzs'>A Categorical View of Computational Effects</a></p>
+<p><a href='https://people.cs.kuleuven.be/%7Etom.schrijvers/Research/papers/esop2018.pdf'>Explicit Effect Subtyping</a></p>
 </article></body></html>
