--- a/blogarion/unsorted-teaching.html
+++ b/blogarion/unsorted-teaching.html
@@ -13,6 +13,7 @@ simplified.</p>
 <p><a href='https://www.fpcomplete.com/blog/2016/11/exceptions-best-practices-haskell'>Exceptions Best Practices in Haskell. </a></p>
 <p><a href='https://softwareengineering.stackexchange.com/questions/322431/what-is-a-comonad-and-how-are-they-useful'>Good allegory about monads</a> See the original question where the gy explains monads and asks about comonads.</p>
 <p>https://github.com/kwf/ComonadSheet</p>
+<p>TODO: links from N.Mishin</p>
 <h3 id="Functional-programming-books">Functional programming books</h3>
 
 <p><a href='https://cs.uwaterloo.ca/~plragde/flaneries/FDS/index.html'>Functional Data Structures</a> (a flânerie by Prabhakar Ragde)
