--- a/blogarion/unsorted-teaching.html
+++ b/blogarion/unsorted-teaching.html
@@ -14,6 +14,8 @@ simplified.</p>
 <p><a href='https://softwareengineering.stackexchange.com/questions/322431/what-is-a-comonad-and-how-are-they-useful'>Good allegory about monads</a> See the original question where the gy explains monads and asks about comonads.</p>
 <p>https://github.com/kwf/ComonadSheet</p>
 <p>TODO: links from N.Mishin</p>
+<p><a href='https://www.cl.cam.ac.uk/teaching/1718/L28/materials.html'>Advanced Functional Programming</a> from Cambridge 2018</p>
+<p>(https://www.cl.cam.ac.uk/teaching/1718/Types/)[Types] from Cambridge</p>
 <h3 id="Functional-programming-books">Functional programming books</h3>
 
 <p><a href='https://cs.uwaterloo.ca/~plragde/flaneries/FDS/index.html'>Functional Data Structures</a> (a flânerie by Prabhakar Ragde)
@@ -27,4 +29,5 @@ with OCaml in mind: sorting, sequence access, queues, sets and maps, hashconsing
 <p>Haskell Wiki: <a href='https://wiki.haskell.org/OOP_vs_type_classes'>OOP vs type classes</a></p>
 <p><a href='https://github.com/Stanislav-Sartasov/spsu-mm-programming-second-course'>Github Сартасовского курса</a></p>
 <p><a href='http://www2.imm.dtu.dk/courses/02917/Presburger1.pdf'>Presburger Arithmetic: Cooper’s algorithm</a></p>
+<p><a href='https://github.com/jwbuurlage/category-theory-programmers'>Notes on Category Theory and Haskell</a></p>
 </article></body></html>
