--- a/fp2018/index.html
+++ b/fp2018/index.html
@@ -45,6 +45,10 @@
 <div class="paragraph">
 <p><a href="https://www.twirpx.com/file/1674935">Bird R. Thinking Functionally with Haskell</a></p>
 </div>
+<div class="paragraph">
+<p><a href="https://github.com/hmemcpy/milewski-ctfp-pdf">Category Theory for Programmers</a> (а также видео) хорошая, но может
+ показаться зубодробительной. Короче, не для каждого.</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_книги_переведенные">Книги переведенные</h3>
@@ -127,7 +131,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-09-06 12:12:00 MSK
+Last updated 2018-09-06 13:43:12 MSK
 </div>
 </div>
 </body>
