--- a/fp2018/index.html
+++ b/fp2018/index.html
@@ -100,6 +100,9 @@
 <h2 id="week1">Неделя 1 (06 сентября)</h2>
 <div class="sectionbody">
 <div class="paragraph">
+<p><a href="01introduction.pdf">слайды</a></p>
+</div>
+<div class="paragraph">
 <p>Про типы</p>
 </div>
 </div>
@@ -108,7 +111,10 @@
 <h2 id="week2">Неделя 2 (13 сентября)</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Про списки</p>
+<p><a href="02typedesign.pdf">слайды</a></p>
+</div>
+<div class="paragraph">
+<p>Про дизайн собственных типов данных</p>
 </div>
 </div>
 </div>
@@ -116,7 +122,10 @@
 <h2 id="week3">Неделя 3 (20 сентября)</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>qwer</p>
+<p><a href="03.pdf">слайды</a></p>
+</div>
+<div class="paragraph">
+<p>Несколько задач, стратегии вычислений, Fixpoint.</p>
 </div>
 </div>
 </div>
@@ -131,7 +140,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-09-06 13:43:12 MSK
+Last updated 2018-09-20 14:41:49 MSK
 </div>
 </div>
 </body>
