Course page: more notes about IDE

--- a/fp2018/index.html
+++ b/fp2018/index.html
@@ -26,14 +26,20 @@
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://repl.it">Repl.it!</a> и там выбрать Haskell. На первых порах хватит.</p>
+<p><span class="line-through"><a href="https://repl.it">Repl.it!</a> и там выбрать Haskell. На первых порах хватит.</span></p>
 </li>
 <li>
-<p>Самая распостраненый способ уставновить Haskell - это Haskell Platform (<a href="http://www.haskell.org/platform" class="bare">http://www.haskell.org/platform</a>).
-Работает для Windows, Linux и Mac. Для курса будет достаточно минимального варианта установки.</p>
+<p><span class="line-through">Eсть плагин для IntelliJ IDEA</span></p>
 </li>
 <li>
-<p>В Haskell Platform есть простые среды разработки GHCi и WinGHCi. <a href="http://msimuni.wdfiles.com/local&#8212;&#8203;files/fp4/StartingWithGHC.pdf">Вот</a> краткая инструкция о том, как начать с ними работать.</p>
+<p>Нужно устанавливать <a href="https://github.com/haskell/haskell-ide-engine">Haskell IDE Engine a.k.a. HIE</a> и в README читать как настроить ваш любимый редактор (VsCode, Emacs, etc.)</p>
+</li>
+<li>
+<p><span class="line-through">Самая распостраненый способ уставновить Haskell - это Haskell Platform (<a href="http://www.haskell.org/platform" class="bare">http://www.haskell.org/platform</a>).
+Работает для Windows, Linux и Mac. Для курса будет достаточно минимального варианта установки.</span></p>
+</li>
+<li>
+<p><span class="line-through">В Haskell Platform есть простые среды разработки GHCi и WinGHCi. <a href="http://msimuni.wdfiles.com/local&#8212;&#8203;files/fp4/StartingWithGHC.pdf">Вот</a> краткая инструкция о том, как начать с ними работать.</span></p>
 </li>
 </ul>
 </div>
@@ -160,7 +166,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-10-02 17:51:34 MSK
+Last updated 2018-11-03 23:43:07 MSK
 </div>
 </div>
 </body>
