Slides about monads

--- a/fp2018/index.html
+++ b/fp2018/index.html
@@ -55,6 +55,9 @@
 <p><a href="https://github.com/hmemcpy/milewski-ctfp-pdf">Category Theory for Programmers</a> (а также видео) хорошая, но может
  показаться зубодробительной. Короче, не для каждого.</p>
 </div>
+<div class="paragraph">
+<p>Обзор стандартной библиотеки (english) <a href="http://www.cse.chalmers.se/edu/course/TDA452/tourofprelude.html">HTML</a> <a href="http://www.cse.chalmers.se/edu/course/TDA452/Haskell-Prelude-Tour-A4.pdf">PDF</a></p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_книги_переведенные">Книги переведенные</h3>
@@ -78,6 +81,9 @@
 </div>
 <div class="sect2">
 <h3 id="_а_также">А также</h3>
+<div class="paragraph">
+<p><a href="http://cheatsheet.codeslower.com/CheatSheet.pdf">Шпаргалка</a></p>
+</div>
 <div class="paragraph">
 <p>Можно донимать хаскеллистов в различных чатиках на просторах IRC или Telegram</p>
 </div>
@@ -166,7 +172,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-11-03 23:43:07 MSK
+Last updated 2018-11-12 14:30:01 MSK
 </div>
 </div>
 </body>
