More notest on HIE

--- a/fp2018/index.html
+++ b/fp2018/index.html
@@ -32,8 +32,20 @@
 <p><span class="line-through">Eсть плагин для IntelliJ IDEA</span></p>
 </li>
 <li>
-<p>Нужно устанавливать <a href="https://github.com/haskell/haskell-ide-engine">Haskell IDE Engine a.k.a. HIE</a> и в README читать как настроить ваш любимый редактор (VsCode, Emacs, etc.)</p>
+<p>Нужно устанавливать <a href="https://github.com/haskell/haskell-ide-engine">Haskell IDE Engine a.k.a. HIE</a> и в README читать как настроить ваш любимый редактор (VsCode, Emacs, etc.). Только убедитесь, чтобы версии совпадали.</p>
 </li>
+</ul>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre>➜  haskell-ide-engine git:(master) stack exec ghc -- --version
+The Glorious Glasgow Haskell Compilation System, version 8.4.4
+➜  haskell-ide-engine git:(master) hie --version
+Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 commits) x86_64 ghc-8.4.4</pre>
+</div>
+</div>
+<div class="ulist">
+<ul>
 <li>
 <p><span class="line-through">Самая распостраненый способ уставновить Haskell - это Haskell Platform (<a href="http://www.haskell.org/platform" class="bare">http://www.haskell.org/platform</a>).
 Работает для Windows, Linux и Mac. Для курса будет достаточно минимального варианта установки.</span></p>
@@ -172,7 +184,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-11-12 14:30:01 MSK
+Last updated 2018-12-04 14:35:36 MSK
 </div>
 </div>
 </body>
