Preparing questions for exam

--- a/fp2018/index.html
+++ b/fp2018/index.html
@@ -181,10 +181,78 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="questions">Вопросы к экзамену</h2>
+<div class="sectionbody">
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p>☦ Алгебра типов. Простейшие типы из которые можно много чего построить.</p>
+</li>
+<li>
+<p>Эквивалентность, равенство и изоморфизм. И для типов тоже.</p>
+</li>
+<li>
+<p>Как из простейших типов построить что-то изоморфное данному алгебраическому типу?</p>
+</li>
+<li>
+<p>☦ Лямда-исчисление. Три правила перобразования лямбда-термов.</p>
+</li>
+<li>
+<p>Стратегии вычисления лямбда-термов: call-by-name, call-by-value, call-by-need.
+Почему одно лучше/хуже другого?</p>
+</li>
+<li>
+<p>☦ Унификация и подстановки. ☦ Capture avoiding substitution. Индексы де Брауна.</p>
+</li>
+<li>
+<p>☦ Функторы. ☦ Законы функторов.</p>
+</li>
+<li>
+<p>☦ Аппликативные функторы. Законы</p>
+</li>
+<li>
+<p>☦ Монады. ☦ Законы монад. ☦ Выражение функторов и аппликативов, если монада описана.
+☦ Стандартные монады: Reader, Writer, ☦ State, ☦ List, ☦ Maybe, Cont, ☦ IO.</p>
+</li>
+<li>
+<p>☦ Do-нотация. ☦ Преобразование монадического кода из do-нотации и обратно.</p>
+</li>
+<li>
+<p>Преобразования кода с list comprehension в do-нотацию и обратно.</p>
+</li>
+<li>
+<p>Классы типов. Мотивация.</p>
+</li>
+<li>
+<p>Free monad. Пример.</p>
+</li>
+<li>
+<p>Фантомные типы. Пример.</p>
+</li>
+<li>
+<p>Экзистенциальные типы. Почему такое название?</p>
+</li>
+<li>
+<p>Type families. Мотивация.</p>
+</li>
+<li>
+<p>☦ Катаморфизм и анаморфизм. Пример.</p>
+</li>
+<li>
+<p>Параморфизм. Хиломорфизм.</p>
+</li>
+</ol>
+</div>
+<div class="paragraph">
+<p>За мямленье в ответ на вопрос с ☦ будет больно.</p>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-12-04 17:15:37 MSK
+Last updated 2018-12-25 00:31:20 MSK
 </div>
 </div>
 </body>
