--- a/fp2018/index.html
+++ b/fp2018/index.html
@@ -222,6 +222,10 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <p>Преобразования кода с list comprehension в do-нотацию и обратно.</p>
 </li>
 <li>
+<p>Стандартные функции над списками. Будьте готовы написать двухстрочную функцию (map, drop, etc.)
+не отходя от кассы (или типа того).</p>
+</li>
+<li>
 <p>Классы типов. Мотивация.</p>
 </li>
 <li>
@@ -252,7 +256,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-12-25 00:31:20 MSK
+Last updated 2018-12-25 01:10:47 MSK
 </div>
 </div>
 </body>
