--- a/blogarion/unsorted-papers.html
+++ b/blogarion/unsorted-papers.html
@@ -28,4 +28,6 @@ Oleg is doing <a href='http://okmij.org/ftp/ML/first-class-modules/generics.ml'>
 <p><a href='http://pauillac.inria.fr/~remy/ornaments/mlorn-2017-09.pdf'>A Principled approach to Ornamentation in ML</a></p>
 <p><a href='https://www.youtube.com/watch?v=6t6bsWVOIzs'>A Categorical View of Computational Effects</a></p>
 <p><a href='https://people.cs.kuleuven.be/%7Etom.schrijvers/Research/papers/esop2018.pdf'>Explicit Effect Subtyping</a></p>
+<p>Fokkinga&#39;s PhD <a href='https://pdfs.semanticscholar.org/7ca8/326eb63f32502c0fc2324b6217a7bc7e8af4.pdf'>Law and Order in Algorithmics</a></p>
+<p>Ralph Hinze<a href='https://www.cs.ox.ac.uk/ralf.hinze/Kan.pdf'>Kan Extensions for Program Optimisation Or: Art and Dan Explain an Old Trick</a></p>
 </article></body></html>
