--- a/fp2018/index.html
+++ b/fp2018/index.html
@@ -115,6 +115,9 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <p><a href="https://ruhaskell.org/links.html" class="bare">https://ruhaskell.org/links.html</a></p>
 </div>
 <div class="paragraph">
+<p><a href="http://ideas.cs.uu.nl/HEE/index.html">Трассировка вычисления</a> функций в Haskell.</p>
+</div>
+<div class="paragraph">
 <p>Курсы на степике "какие есть": <a href="https://stepik.org/course/75/" class="bare">https://stepik.org/course/75/</a> и <a href="https://stepik.org/course/693/" class="bare">https://stepik.org/course/693/</a> от Д.Москвина</p>
 </div>
 </div>
@@ -184,10 +187,16 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <div class="sect1">
 <h2 id="questions">Вопросы к экзамену</h2>
 <div class="sectionbody">
+<div class="paragraph">
+<p>За мямленье в ответ на вопрос с ☦ будет больно.</p>
+</div>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>☦ Алгебра типов. Простейшие типы из которые можно много чего построить.</p>
+<p>Абстрактный спискок и сложность основных операций у него. Какие (минимум две) реализации абстрактных списков Вы знаете и что там со сложностью основных опeраций?</p>
+</li>
+<li>
+<p>☦ Алгебра типов. Простейшие типы из которых можно много чего построить.</p>
 </li>
 <li>
 <p>Эквивалентность, равенство и изоморфизм. И для типов тоже.</p>
@@ -209,10 +218,10 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <p>☦ Функторы. ☦ Законы функторов.</p>
 </li>
 <li>
-<p>☦ Аппликативные функторы. Законы</p>
+<p>☦ Аппликативные функторы. Законы аппликативов.</p>
 </li>
 <li>
-<p>☦ Монады. ☦ Законы монад. ☦ Выражение функторов и аппликативов, если монада описана.
+<p>☦ Монады. ☦ Законы монад. ☦ Выражение функторов и аппликативов, если монада уже описана.
 ☦ Стандартные монады: Reader, Writer, ☦ State, ☦ List, ☦ Maybe, Cont, ☦ IO.</p>
 </li>
 <li>
@@ -248,15 +257,12 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </li>
 </ol>
 </div>
-<div class="paragraph">
-<p>За мямленье в ответ на вопрос с ☦ будет больно.</p>
-</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-12-25 12:55:58 MSK
+Last updated 2019-01-18 18:34:07 MSK
 </div>
 </div>
 </body>
