WIP on lectures content and order

--- a/fp2018/index.html
+++ b/fp2018/index.html
@@ -80,6 +80,9 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <div class="sect2">
 <h3 id="_книги_на_русском">Книги на русском</h3>
 <div class="paragraph">
+<p><a href="https://dmkpress.com/catalog/computer/programming/functional/978-5-97060-694-0">Will Kurt Get Programming with HASKELL</a> выглядит достаточно простой. Вот английская версия на <a href="https://www.twirpx.com/file/2510569/">Twirpx</a></p>
+</div>
+<div class="paragraph">
 <p><a href="https://www.ohaskell.guide/pdf/ohaskell.pdf">Денис Шевченко "О Haskell по-человечески" 2014</a> Мало страниц, большой шрифт, хорошо рассказанные азы
 на простых примерах</p>
 </div>
@@ -161,7 +164,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <p><a href="03.pdf">слайды</a></p>
 </div>
 <div class="paragraph">
-<p>Несколько задач, стратегии вычислений, Fixpoint.</p>
+<p>Несколько задач, стратегии вычислений в лямбда-исчислении, неподвижные точки для функций и для типов.</p>
 </div>
 </div>
 </div>
@@ -172,7 +175,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <p><a href="04.pdf">слайды</a></p>
 </div>
 <div class="paragraph">
-<p>Несколько задач, унификация.</p>
+<p>Формулировка задач про различные виды интерпретаторов лямбда-исчисления. Упражнения на вывод типа по телу функции. Унификация.</p>
 </div>
 </div>
 </div>
@@ -180,7 +183,112 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <h2 id="week5">Неделя 5 (04 октября)</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Решаем/разбираем предыдущие задачи  в стиле "практики"</p>
+<p><a href="05.pdf">Cлайды</a> по сути являются большим списком задач, на которых можно поупражняться. Список пополнялся в течение семестра.</p>
+</div>
+<div class="paragraph">
+<p>Решаем/разбираем задачи про виды лямбда-исчисления в тиле "практики"</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="week6">Неделя 6 (11 октября)</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Программирование вживую на паре (задача унификации).</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="week7">Неделя 7 (18 октября)</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>"Летучка" 1 про вывод типов</p>
+</div>
+<div class="paragraph">
+<p>Программирование вживую на паре (интерпретатор лямбда-исчисления).</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="week8">Неделя 8 (25 октября)</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Программирование вживую на паре (интерпретатор лямбда-исчисления).</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="week9">Неделя 9 (1 ноября)</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>"Летучка" 2 про вывод типов.</p>
+</div>
+<div class="paragraph">
+<p>Программирование вживую на паре (интерпретатор лямбда-исчисления).</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="week10">Неделя 10 (8 ноября)</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p><span class="line-through">Программирование вживую на паре (интерпретатор лямбда-исчисления).</span> Препод заболел.</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="week11">Неделя 11 (15 ноября)</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p><a href="06.pdf">Cлайды</a></p>
+</div>
+<div class="paragraph">
+<p>Функторы, Аппликативы, Монады. Законы. do-нотация. Примеры.</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="week12">Неделя 12 (22 ноября)</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p><a href="07.pdf">Cлайды</a></p>
+</div>
+<div class="paragraph">
+<p>Мемоизация. Краткий обзор теоритических аспектов: α, β, η - правила в лямбда исчислении. STLC. Система Hindley-Milner-Damas&#8217;a.
+λ куб. Let-полиморфизм.</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="week13">Неделя 13 (29 ноября)</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p><a href="08.pdf">Cлайды</a></p>
+</div>
+<div class="paragraph">
+<p>Равенство и эквивалентность типов. GADT и создание DSL. Initial&amp;final embedding. Expression problem. Примеры. Expression problem</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="week14">Неделя 14 (06 декабря)</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p><a href="09.pdf">Cлайды</a></p>
+</div>
+<div class="paragraph">
+<p>Free монады.</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="week15">Неделя 15 (13 декабря)</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p><a href="10.pdf">Cлайды</a></p>
+</div>
+<div class="paragraph">
+<p>Семейства типов &amp; cхемы рекурсии</p>
 </div>
 </div>
 </div>
@@ -262,7 +370,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-01-18 18:34:07 MSK
+Last updated 2019-03-26 23:29:52 MSK
 </div>
 </div>
 </body>
