--- a/blogarion/unsorted-papers.html
+++ b/blogarion/unsorted-papers.html
@@ -30,4 +30,6 @@ Oleg is doing <a href='http://okmij.org/ftp/ML/first-class-modules/generics.ml'>
 <p><a href='https://people.cs.kuleuven.be/%7Etom.schrijvers/Research/papers/esop2018.pdf'>Explicit Effect Subtyping</a></p>
 <p>Fokkinga&#39;s PhD <a href='https://pdfs.semanticscholar.org/7ca8/326eb63f32502c0fc2324b6217a7bc7e8af4.pdf'>Law and Order in Algorithmics</a></p>
 <p>Ralph Hinze<a href='https://www.cs.ox.ac.uk/ralf.hinze/Kan.pdf'>Kan Extensions for Program Optimisation Or: Art and Dan Explain an Old Trick</a></p>
+<p><a href='http://compilers.cs.uni-saarland.de/papers/lkh15_cgo.pdf'>A  Graph-Based  Higher-Order  Intermediate  Representation</a></p>
+<p><a href='http://perso.ens-lyon.fr/nicolas.brisebarre/Publi/fpdivision.pdf'>Accelerating Correctly Rounded Floating-PointDivision When the Divisor is Known in Advance</a> 2003</p>
 </article></body></html>
