--- a/blogarion/unsorted-teaching.html
+++ b/blogarion/unsorted-teaching.html
@@ -30,4 +30,7 @@ with OCaml in mind: sorting, sequence access, queues, sets and maps, hashconsing
 <p><a href='https://github.com/Stanislav-Sartasov/spsu-mm-programming-second-course'>Github Сартасовского курса</a></p>
 <p><a href='http://www2.imm.dtu.dk/courses/02917/Presburger1.pdf'>Presburger Arithmetic: Cooper’s algorithm</a></p>
 <p><a href='https://github.com/jwbuurlage/category-theory-programmers'>Notes on Category Theory and Haskell</a></p>
+<p><a href='https://www.usenix.org/system/files/nsdi19-wang-xiang.pdf'>Hyperscan: A Fast Multi-pattern Regex Matcher  for Modern CPUs</a></p>
+<p><a href='https://drive.google.com/drive/folders/0B1Rdr1fbS6M9SjlKUk1zMVNjOVU'>Granin&#39;s book</a></p>
+<p>Foundations of Coq <a href='http://www.cse.chalmers.se/~peterd/papers/Inductive_Families.pdf'>Inductive families</a></p>
 </article></body></html>
