--- a/other/ww2.html
+++ b/other/ww2.html
@@ -7,7 +7,7 @@
 <script src="https://cdn.knightlab.com/libs/timeline3/latest/js/timeline.js"></script>
 </head>
 
-<div id='timeline-embed' style="width: 100%; height: 600px"></div>
+<div id='timeline-embed' />
 
 <script type="text/javascript">
   // JSON спецификация
@@ -55,6 +55,10 @@
         // two arguments: the id of the Timeline container (no '#')
         // and the JSON object or an instance of TL.TimelineConfig created from
         // a suitable JSON object
-        window.timeline = new TL.Timeline('timeline-embed', timeline_json);
+  var options = 
+    { hash_bookmark: true
+    , language: "ru"
+  };
+        window.timeline = new TL.Timeline('timeline-embed', timeline_json, options);
 </script>
 </html>
