--- a/fp2019/index.html
+++ b/fp2019/index.html
@@ -121,45 +121,64 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <div class="paragraph">
 <p><a href="http://ideas.cs.uu.nl/HEE/index.html">Трассировка вычисления</a> функций в Haskell.</p>
 </div>
-<div class="paragraph">
-<p>Курсы на степике "какие есть": <a href="https://stepik.org/course/75/" class="bare">https://stepik.org/course/75/</a> и <a href="https://stepik.org/course/693/" class="bare">https://stepik.org/course/693/</a> от Д.Москвина</p>
-</div>
-</div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_а_к_январю">А к январю</h2>
-<div class="sectionbody">
-<div class="paragraph">
-<p>Стоило бы <a href="https://stepik.org/join-class/c1c9e25ba893da83ade391c83755dac408b4d90c">сдать</a>
-второй курс Москвина на Степике, чтобы получить "допуск на вход" на экзамен.</p>
 </div>
 </div>
 </div>
 <div class="sect1">
-<h2 id="week1">Неделя 1 (? сентября)</h2>
+<h2 id="_а_к_экзамену">А к экзамену</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p><a href="01introduction.pdf">слайды</a></p>
+<p>Стоило бы сдать допуск на вход:</p>
 </div>
-<div class="paragraph">
-<p>Про типы</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Cдать <a href="https://stepik.org/join-class/3a7513c770b80866b96e18baa03c3ce18e87303e">1ю часть курса</a> про ФП на степике</p>
+</li>
+<li>
+<p>Cдать <a href="https://stepik.org/join-class/a4741bd985027507643baf2b07221c264329b484">2ю часть курса</a> про ФП на степике</p>
+</li>
+<li>
+<p>Колобок про теоркат (но это пока не точно).</p>
+</li>
+<li>
+<p>Домашки в количестве примерно 5 штук</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Планируется разрешить писать на Haskell, OCaml/ReasonML или Scala 3 (sic!)</p>
+</li>
+<li>
+<p>Планируется примерно 5 домашек</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
 </div>
 </div>
 </div>
 <div class="sect1">
-<h2 id="week2">Неделя 2 (13 сентября)</h2>
+<h2 id="week1">Неделя 1 (5 сентября)</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p><a href="02typedesign.pdf">слайды</a></p>
+<p><a href="00intro.pdf">слайды</a></p>
 </div>
+<div class="paragraph">
+<p>Вводная про языки программирования</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="week2">Неделя 2 (12 сентября)</h2>
+<div class="sectionbody">
 <div class="paragraph">
 <p>Про дизайн собственных типов данных</p>
 </div>
 </div>
 </div>
 <div class="sect1">
-<h2 id="questions">Вопросы к экзамену 2018/2019 года</h2>
+<h2 id="questions">Теоретические вопросы к экзамену 2018 (предыдущего) года</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>За мямленье в ответ на вопрос с ☦ будет больно.</p>
@@ -205,8 +224,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <p>Преобразования кода с list comprehension в do-нотацию и обратно.</p>
 </li>
 <li>
-<p>Стандартные функции над списками. Будьте готовы написать двухстрочную функцию (map, drop, etc.)
-не отходя от кассы (или типа того).</p>
+<p>Стандартные функции над списками. Будьте готовы написать двухстрочную функцию (map, drop, etc.) не отходя от кассы (или типа того).</p>
 </li>
 <li>
 <p>Классы типов. Мотивация.</p>
@@ -236,7 +254,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-08-25 14:40:15 MSK
+Last updated 2019-09-05 14:34:28 MSK
 </div>
 </div>
 </body>
