--- a/fp2019/index.html
+++ b/fp2019/index.html
@@ -125,6 +125,17 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 </div>
 <div class="sect1">
+<h2 id="_проекты_полу_курсовые">Проекты/(полу)курсовые</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p><a href="projects.html">Тут</a> есть список проектов которые можно попытаться сделать как курсовую (или миникурсовую в четвертом семетре). Как задача на 5 автоматом они выглядят чересчур сложными.</p>
+</div>
+<div class="paragraph">
+<p>А ещё вы можете попробовать найти что-нибудь интересное у других людей из нашей лаборатории по понедельникам.</p>
+</div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="_а_к_экзамену">А к экзамену</h2>
 <div class="sectionbody">
 <div class="paragraph">
@@ -254,7 +265,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-09-05 14:34:28 MSK
+Last updated 2019-09-06 01:00:43 MSK
 </div>
 </div>
 </body>
