--- a/fp2019/index.html
+++ b/fp2019/index.html
@@ -150,6 +150,9 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <p>Cдать <a href="https://stepik.org/join-class/a4741bd985027507643baf2b07221c264329b484">2ю часть курса</a> про ФП на степике</p>
 </li>
 <li>
+<p>TODO: разобраться что там с курсами по Scala.</p>
+</li>
+<li>
 <p>Колобок про теоркат (но это пока не точно).</p>
 </li>
 <li>
@@ -265,7 +268,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-09-06 01:00:43 MSK
+Last updated 2019-09-06 01:01:24 MSK
 </div>
 </div>
 </body>
