--- a/fp2019/projects.html
+++ b/fp2019/projects.html
@@ -27,6 +27,7 @@
 <li><a href="#incremental">Демка инкрементальных вычислений с матрицами</a></li>
 <li><a href="#caml_lua">Компиляция программ на  OCaml в lua</a></li>
 <li><a href="#altergo">Alt-Ergo (гроб)</a></li>
+<li><a href="#merlin">merlin</a></li>
 <li><a href="#active">Active Patterns в OCaml (вроде как занята)</a></li>
 </ul>
 </li>
@@ -113,6 +114,10 @@ Lambda байткод) по аналогии с проектом js_of_ocaml.
 
 </div>
 <div class="sect2">
+<h3 id="merlin">merlin</h3>
+
+</div>
+<div class="sect2">
 <h3 id="active">Active Patterns в OCaml (вроде как занята)</h3>
 <div class="paragraph">
 <p>В Haskell они есть (называются Pattern Synonyms), в F#&#8201;&#8212;&#8201;тоже, а в OCaml непорядок.</p>
@@ -149,7 +154,7 @@ Lambda байткод) по аналогии с проектом js_of_ocaml.
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-09-06 00:53:34 MSK
+Last updated 2019-09-06 01:16:52 MSK
 </div>
 </div>
 </body>
