--- a/fp2019/index.html
+++ b/fp2019/index.html
@@ -186,10 +186,8 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <div class="sect1">
 <h2 id="week2">Неделя 2 (12 сентября)</h2>
 <div class="sectionbody">
-<div class="literalblock">
-<div class="content">
-<pre>link:01typedesign.pdf[слайды]</pre>
-</div>
+<div class="paragraph">
+<p><a href="01typedesign.pdf">слайды</a></p>
 </div>
 <div class="paragraph">
 <p>Про дизайн собственных типов данных</p>
@@ -279,7 +277,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-09-12 13:38:39 MSK
+Last updated 2019-09-12 14:49:22 MSK
 </div>
 </div>
 </body>
