--- a/fp2019/projects.html
+++ b/fp2019/projects.html
@@ -112,7 +112,22 @@ Lambda байткод) по аналогии с проектом js_of_ocaml.
 </div>
 <div class="sect2">
 <h3 id="altergo">Alt-Ergo (гроб)</h3>
-
+<div class="paragraph">
+<p>Допиливать существующий SAT/SMT solver алгоритмами из мира мат. логики, которые там не сделалны.</p>
+</div>
+<div class="paragraph">
+<p>На вскидку это</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>unsat core для DPLL/CDCL</p>
+</li>
+<li>
+<p>IC3 и прочие апгрейды его</p>
+</li>
+</ul>
+</div>
 </div>
 <div class="sect2">
 <h3 id="merlin">merlin</h3>
@@ -128,7 +143,7 @@ Lambda байткод) по аналогии с проектом js_of_ocaml.
 <p>Сейчас стандартом IDE для языка OCaml является merlin, который умеет минимальный набор фич</p>
 </div>
 <div class="paragraph">
-<p>TODO: дописать</p>
+<p>Хочется его постепенно допилить: различные умные рефакторинги (в частности whole project renaming) и т.д.</p>
 </div>
 </div>
 <div class="sect2">
@@ -185,7 +200,7 @@ Lambda байткод) по аналогии с проектом js_of_ocaml.
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-09-12 14:49:05 MSK
+Last updated 2019-09-16 15:35:31 MSK
 </div>
 </div>
 </body>
